public/css/grocy.css
/* Main style customizations */
body {
	font-family: 'Noto Sans', sans-serif;
}

.content-text {
	font-size: 0.85rem;
}

.responsive-button {
    white-space: normal;
}

.no-real-button {
	pointer-events: none;
}

.timeago-contextual {
	font-style: italic;
	font-size: 0.8em;
}

a.discrete-link {
	color: inherit !important;
	transition: all 0.3s !important;
}

a.discrete-link:hover {
	color: #337ab7 !important;
	text-decoration: none !important;
}

a.discrete-link:focus {
	color: #ab2230 !important;
	text-decoration: none !important;
}

.card {
	border: 2px solid;
	border-color: #d6d6d6;
	border-radius: 0;
}

.card-header {
	background-color: #e5e5e5;
}

.content-text .invalid-feedback {
	font-size: 95%;
}

/* Navigation style customizations */
#mainNav {
	background-color: #e5e5e5 !important;
	border-bottom: 2px solid !important;
	border-color: #d6d6d6 !important;
}

.navbar-sidenav {
	overflow-y: auto;
	overflow-x: hidden;
}

.navbar-sidenav,
.sidenav-second-level {
	background-color: #e5e5e5 !important;
	border-top: 2px solid !important;
	border-right: 2px solid !important;
	border-color: #d6d6d6 !important;
}

.navbar-nav .dropdown-menu {
	background-color: #e5e5e5 !important;
	border: 0;
	border-radius: 0;
}

.navbar-nav .dropdown-divider {
	border-top: 2px solid !important;
	border-color: #d6d6d6 !important;
}

.sidenav-toggler {
	background-color: #d6d6d6 !important;
	border-right: 2px solid !important;
	border-color: #d6d6d6 !important;
}

.navbar-sidenav > li,
.sidenav-second-level > li {
	transition: all 0.3s !important;
}

.navbar-sidenav > li:hover,
.sidenav-second-level > li:hover,
.navbar-nav .dropdown-item:hover {
	box-shadow: inset 5px 0 0 #337ab7 !important;
	background-color: #d6d6d6 !important;
}

.navbar-sidenav > li > a:focus,
.sidenav-second-level > li > a:focus,
.navbar-nav .dropdown-item:focus {
	box-shadow: inset 5px 0 0 #ab2230 !important;
	background-color: #d6d6d6 !important;
}

.active-page {
	box-shadow: inset 5px 0 0 #ab2230 !important;
	background-color: #d6d6d6 !important;
}

/* Third party component customizations - DataTables */
td {
     vertical-align: middle !important;
}

.table td.fit-content,
.table th.fit-content {
	white-space: nowrap;
	width: 1%;
}

.dataTables_filter,
.dataTables_info {
	display: none;
}

/* Third party component customizations - toastr */
#toast-container > div {
	opacity: 1;
	filter: alpha(opacity=100);
}

.toast-success {
	background-color: #28a745;
}

.toast-error {
	background-color: #dc3545;
}

#toast-container > div {
	box-shadow: none;
}

/* Third party component customizations - SB Admin 2 */
#mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown > .nav-link:after,
#mainNav .navbar-collapse .navbar-sidenav .nav-link-collapse:after {
  font-family: 'Font Awesome 5 Free';
  font-weight: 900;
}

@media (max-width:992px) {
	#mainNav .navbar-collapse .navbar-sidenav > .nav-item > .nav-link {
		padding: 0.8em;
	}
}

